--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -46,11 +46,11 @@ nav a {
     padding: 1rem;
 }
 
-nav a:link, nav a:visited{
+nav a:link, nav a:visited {
     color: var(--nav-link-color);
 }
 
 nav a:hover {
     color: var(--nav-hover-link-color)
-    var(--nav-background-color)
+    var(--nav-hover-background-color);
 }
