--- a/style.css
+++ b/style.css
@@ -1,23 +1,24 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 main {
     max-width: 840px;
 }
-aside{
-    margin: 1em;
-    border: 1px solid rgba(0, 0, 0, 0.2); /*1*/
-    padding: 1em;
-    background-color: #eee;
-    color: #333;
+aside {
+    width: 20em;
     text-align: center;
 }
 
 aside img{
     width: 200px;
     height:auto;
-
 }
 main img {
     width: 150px;
-    height: auto;
+    height:auto;
+    float:right
 }
 
 
@@ -26,4 +27,17 @@ footer {
     margin-top:1em;
     border-top: 1px solid #000;
     text-align: center;
+}
+/*class selectors*/
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0,.1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+aside h2{
+    position:absolute;
+    top: 47px;
+    left: 150px;
 }
