--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -55,3 +55,8 @@ nav a:hover{
     background-color: var(--nav-hover-background-color);
 
 }
+.hero img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
