--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -52,12 +52,12 @@ nav a:link, nav a:visited {
 }
 nav a:hover{
     color: var(--nav-hover-link-color);
-    background-color: var(--nav-hover-background-color);
 
 }
-.hero img{
+.hero {
     position: relative;
     display: block;
     width: 100%;
     height: auto;
 }
+
