--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    font: 1em var(--paragraph-font);
+    font-family: 1em var(--paragraph-font);
     max-width: 960px;
     padding: 20px;
 }
