--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@ main {
 aside {
     width: 20em;
     text-align: center;
+    position: relative;
 }
 
 aside img{
@@ -18,7 +19,7 @@ aside img{
 main img {
     width: 150px;
     height: auto;
-    float:right
+    float:right; 
 }
 
 
