--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    font: 1em var(--paragraph-font);
+    font-family: 1em var(--paragraph-font);
     max-width: 960px;
     padding: 20px;
 }
@@ -31,7 +31,7 @@ header{
 }
 
 p{
-    padding: 25px;
+    padding: 5px;
 }
 
 nav{
@@ -54,10 +54,37 @@ nav a:hover{
     color: var(--nav-hover-link-color);
 
 }
+
 .hero {
     position: relative;
+}
+.hero img{
     display: block;
     width: 100%;
     height: auto;
 }
+.hero h1{
+    position: absolute;
+    top: 80px;
+    left: 425px;
+}
+.hero article {
+    position: absolute;
+    max-width: 90%;
+    height: auto;
+    top: 10px;
+    left: 0;
+    right: 0;
+    margin:0 auto;
+    background-color: #0096E0;
 
+}
+
+.hero article img{
+    float: right;
+    width: 300px;
+
+}
+.hero article p {
+
+}
