--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -33,6 +33,7 @@ nav{
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display: flex;
+    list-style: none;
 }
 
 nav a {
@@ -40,6 +41,7 @@ nav a {
     color: var(--nav-link-color);
     text-decoration: none;
     padding: 1rem;
+    text-align: right;
 }
 
 nav a:link, nav a:visited {
@@ -80,10 +82,52 @@ nav a:hover{
     width: 300px;
 
 }
-.hero article p {
-
-}
 
 footer img{
-    width: 100%;
+    width: 5%;
+    float: right;
+}
+
+
+
+
+header{
+    margin: 1rem auto;
+    display: grid;
+    grid-template-columns: 120px 1fr 2fr;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    max-width: 1000px;
+}
+
+header img {
+    margin: 0 0.25rem 0 1rem;
+    width: 130x;
+    height: auto;
+}
+
+figure{
+    border: thin #c0c0c0 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    max-width: 220px;
+    margin: auto;
+}
+section{
+    display: flex;
+    justify-content: center;
+}
+figure img{
+    max-width: 220px;
+    max-height: 150px;
+      
+}
+
+figcaption {
+    background-color: #222;
+    color: #fff;
+    font: italic smaller sans-serif;
+    padding: 3px;
+    text-align: center;
 }
