--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -21,3 +21,9 @@ body {
     color: rgb(116, 50, 183);
   }
 
+  button{
+    color: rgb(247, 103, 180);
+    width: 100%;
+    height: 50px;
+  }
+
