--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -34,6 +34,7 @@ nav{
     font-size: 1.2rem;
     display: flex;
     list-style: none;
+    right: 100px;
     
 }
 
@@ -95,10 +96,11 @@ footer img{
 header{
     margin: 1rem auto;
     display: grid;
-    grid-template-columns: 120px 1fr 2fr;
+    grid-template-columns: 150px auto;
     align-items: center;
     border-bottom: 1px solid #ccc;
     max-width: 1000px;
+
 }
 
 header img {
@@ -132,3 +134,145 @@ figcaption {
     padding: 3px;
     text-align: center;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto+Slab&display=swap');
+:root {
+    --primary-color: #201e50;
+    --secondary-color: #FFFFFF;
+    --accent1-color: #fca65f;
+    --accent2-color: #0096E0;
+
+    --heading-font: 'permanent marker', serif;
+    --paragraph-font: 'Roboto Slab-latin', serif;
+
+    --nav-background-color: #0096e0;
+    --nav-link-color: #FFFFFF; 
+    --nav-hover-link-color: #fca65f;
+    --nav-hover-background-color: #201e50;
+}
+
+body {
+    font-family: 1em var(--paragraph-font);
+    max-width: 960px;
+    padding: 20px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--heading-font);
+    color: var(--primary-color);
+}
+
+p{
+    padding: 5px;
+}
+
+nav{
+    background-color: var(--nav-background-color);
+    font-size: 1.2rem;
+    display: flex;
+    list-style: none;
+    
+}
+
+nav a {
+    display: block;
+    color: var(--nav-link-color);
+    text-decoration: none;
+    padding: 1rem;
+    text-align: right;
+}
+
+nav a:link, nav a:visited {
+    color: var(--nav-link-color);
+}
+nav a:hover{
+    color: var(--nav-hover-link-color);
+
+}
+.hero {
+    position: relative;
+}
+.hero img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.hero h1{
+    position: absolute;
+    top: -20px;
+    left: 225px;
+}
+.hero article {
+    position: absolute;
+    max-width: 90%;
+    height: auto;
+    top: 40px;
+    left: 0;
+    right: 0;
+    margin:0 auto;
+    background-color: #0096E0;
+    opacity: 70%;
+
+}
+
+.hero article img{
+    float: right;
+    width: 300px;
+
+}
+
+footer img{
+    width: 5%;
+    float: right;
+}
+
+
+
+
+header{
+    margin: 1rem auto;
+    display: grid;
+    grid-template-columns: 150px auto;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    max-width: 1000px;
+
+}
+
+header img {
+    margin: 0 0.25rem 0 1rem;
+    width: 130x;
+    height: auto;
+}
+
+figure{
+    border: thin #c0c0c0 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    max-width: 220px;
+    margin: auto;
+}
+section{
+    display: flex;
+    justify-content: center;
+}
+figure img{
+    max-width: 220px;
+    max-height: 150px;
+      
+}
+
+figcaption {
+    background-color: #222;
+    color: #fff;
+    font: italic smaller sans-serif;
+    padding: 3px;
+    text-align: center;}
+ form{
+    margin-top: -30%;
+ }
+h3{
+    margin-top: -35%;
+}
+    
