--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -110,7 +110,7 @@ header img {
 }
 
 figure{
-    border: thin #c0c0c0 solid;
+    border: thin #e9dfdf solid;
     display: flex;
     flex-flow: column;
     padding: 5px;
@@ -276,3 +276,30 @@ h3{
     margin-top: -35%;
 }
     
+.trips{
+    width: 30%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+}
+
+.container{
+    display: flex;
+    justify-content: space-between;
+    max-width: fit-content;
+}
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0,.1);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+aside{
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+
