--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,7 +3,7 @@
     --primary-color: #201e50;
     --secondary-color: #FFFFFF;
     --accent1-color: #fca65f;
-    --accent2-color: #0096E0;
+    --accent2-color: #0096e0;
 
     --heading-font: 'permanent marker', serif;
     --paragraph-font: 'Roboto Slab-latin', serif;
@@ -65,6 +65,7 @@ nav a:hover{
     position: absolute;
     top: -20px;
     left: 225px;
+    color: #ffffffcc;
 }
 .hero article {
     position: absolute;
@@ -74,7 +75,7 @@ nav a:hover{
     left: 0;
     right: 0;
     margin:0 auto;
-    background-color: #0096E0;
+    background-color: #eacebf;
     opacity: 70%;
 
 }
@@ -178,3 +179,4 @@ aside{
     position: absolute;
     top: 20px;
     left: 225px;}
+
