--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -177,3 +177,45 @@ h3{
     width: 300px;
 
 }
+
+.maingrid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.maingrid img{
+    width: 50%;
+}
+
+.Level1{
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.Level3{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.Level2{
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+main{
+    margin-bottom: 100px;
+}
+
+table{
+    grid-column: 1/3;
+}
+
+table, th , tr{
+    border: 2px solid black;
+}
+.link{
+    padding: 10px;
+    border: 2px black solid;
+    grid-column: 1/3;
+    text-align: center;
+}
