--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -139,9 +139,32 @@ figcaption {
     font: italic smaller sans-serif;
     padding: 3px;
     text-align: center;}
- form{
-    margin-top: -30%;
+
+ main h2{
+    text-align: center;
  }
+ #homegrid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+ }
+ #homegrid img{
+    width: 100%;
+ }
+ .section_h2{
+    grid-column: 1/3;
+ }
+#div1{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+#div2{
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+#action{
+    text-align: center;
+}
 h3{
     margin-top: -35%;
 }
